--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Ark Studio</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 <img src="img/billboard.jpg" height="640px" width="1358px">  
