--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="top-right">
             <ul id="nav_list" style="list-style: none;"> 
                 <li><a style=" text-decoration: none; color: black;" id="nav_item_1"href="Our Story">Our Story</a></li> 
-                <li><a  style=" text-decoration: none; color: black;"id="nav_item_2"href="recent_work">Product</a></li> 
+                <li><a  style=" text-decoration: none; color: black;"id="nav_item_2"href="recent_work">Products</a></li> 
                 <li><a  style=" text-decoration: none; color: black;"id="nav_item_3" href="Journal">Journal</a></li> 
                 <li><a  style=" text-decoration: none; color: black;"id="nav_item_4"href="Contacts">Contact</a></li>
             </ul> 
@@ -66,7 +66,7 @@
             </div></li>
     </ul>
     </section>
-    <section class="recent_work " style="margin: 0px;">
+    <section class="recent_work " >
         <img src="img/w1.jpg" height="350px"width="266px">
         <img src="img/w2.jpg" height="350px"width="266px" >
         <img src="img/w3.jpg" height="350px"width="266px">
